--- a/README.adoc
+++ b/README.adoc
@@ -11,7 +11,8 @@ image:https://img.shields.io/github/license/th-schwarz/BCG["License badge for BC
 
 Give it a try!
 https://github.com/th-schwarz/BCG/releases[image:https://img.shields.io/github/v/release/th-schwarz/BCG?include_prereleases[GitHub
-release (latest by date including pre-releases)]]
+release (latest by date including pre-releases)]] +
+Before testing BCG, please create a backup of the calendar to be used!
 
 == Preface
 
@@ -66,7 +67,7 @@ dav:
 ----
 
 - `card-url`: The address book URL from which birthdays are read.
-- `cal-url`: The url of the birthday calendar which must be created. _To be on the safe side it's a good idea to use an extra birthday calendar! But it is not mandatory since https://github.com/th-schwarz/BCG/issues/2[A remote event should only be deleted if its categories contain the defined birthday category.] _
+- `cal-url`: The url of the birthday calendar which must be created. _To be on the safe side it's a good idea to use an extra birthday calendar! But it is not mandatory since https://github.com/th-schwarz/BCG/issues/2[A remote event should only be deleted if its categories contain the defined birthday category.]_
 
 == Start
 
