--- a/README.adoc
+++ b/README.adoc
@@ -16,8 +16,15 @@ image:https://ghcr-badge.elias.eu.org/shield/th-schwarz/BirthdayCalendarGenerato
 
 == Preface
 
-A few years ago, I set up my own groupware server with SOGO because I wanted to host my private data myself. It uses standard protocols such as CalDAV and CardDAV. Google previously hosted my calendar and address data. When I switched to SOGO, I quickly realized that I was missing a small but crucial function: the birthday calendar! +
-BCG (Birthday Calendar Generator) is a Java Spring Boot application for creating (and syncing) a birthday calendar from address book data. It's based on spring boot 3, that’s why Java 17 or later is required! It  can be executed by `commandline`, `init.d`, `systemd`, or run in a container via `Docker`.
+BirthdayCalendarGenerator (BCG): A Java Spring Boot application that creates and synchronizes birthday calendars from CardDAV address book data. BCG automatically generates recurring birthday events and maintains them through scheduled synchronization with CalDAV servers like SOGO and Baikal. Supports deployment via `command line`, `systemd`, `init.d`, or `Docker containers`.
+
+Features:
+
+* CardDAV/CalDAV integration
+* Intelligent event synchronization
+* Automated scheduling with cron
+* Docker support with prebuilt images
+* Java 17+ compatible
 
 If you find a bug or certain features are missing, don’t hesitate to file an issue on https://github.com/th-schwarz/BirthdayCalendarGenerator/issues[Github].
 
